# local-lakehouse

./: .env.example  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  docker-compose-airflow.yaml  docker-compose-lake.yaml  docker-compose-system.yaml  docker-compose-trino.yaml  pyproject.toml  ruff.toml
dags/: dbt_dag.py
dags/custom_operator/: dbt_operator.py
dags/dbt_trino/: dbt_project.yml  profiles.template.yml
dags/dbt_trino/models/curated/: dim_country.sql  dim_product.sql  fact_sale.sql  schema.yml
dags/dbt_trino/models/staging/: stg_product_categories.sql  stg_product_subcategories.sql  stg_products.sql  stg_sales.sql  stg_territories.sql
dags/dbt_trino/seeds/: sales.csv
trino_config/catalog/: iceberg.properties
trino_config/coordinator/: init.sql
