[project]
name = "local-lakehouse"
version = "0.1.0"
description = ""
authors = [
    {name = "Andres Manrique",email = "andress0199@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff (>=0.13.2,<0.14.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
